--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <ul id="" content>
+    <ul id="content">
       <li>Juan Dela Cruz</li>
     </ul>
   </body>
